feat: Nova forma de autenticação no site e também uma forma de buscar o usuário pelo email e senha
